package com.dscoding.takenoteapp.common

object TestTags {

    // Notes Screen
    const val NOTE_ITEM = "NOTE_ITEM"
    const val ORDER_SECTION = "ORDER_SECTION"
    const val ORDER_TITLE_RADIO_BUTTON = "ORDER_TITLE_RADIO_BUTTON"
    const val ORDER_ASCENDING_RADIO_BUTTON = "ORDER_ASCENDING_RADIO_BUTTON"
    const val ORDER_DESCENDING_RADIO_BUTTON = "ORDER_DESCENDING_RADIO_BUTTON"

    // Search Screen
    const val SEARCH_QUERY_TEXT_FIELD = "SEARCH_QUERY_TEXT_FIELD"

    // Add Edit Note Screen
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"

    // Settings Screen
    const val THEME_YELLOW_RADIO_BUTTON = "THEME_YELLOW_RADIO_BUTTON"
    const val FONT_MONOSPACE_RADIO_BUTTON = "FONT_MONOSPACE_RADIO_BUTTON"
    const val SHOW_GREETING_SWITCH = "SHOW_GREETING_SWITCH"
    const val SHOW_GREETING_SWITCH_VALUE = "SHOW_GREETING_SWITCH_VALUE"
    const val TWENTY_FOUR_HOUR_SWITCH = "TWENTY_FOUR_HOUR_SWITCH"
    const val TWENTY_FOUR_HOUR_SWITCH_VALUE = "TWENTY_FOUR_HOUR_SWITCH_VALUE"
}