<resources>
    <string name="app_name">Take Note!</string>
    <string name="empty_string" />

    <!-- Generic String -->
    <string name="generic_enabled">Enabled</string>
    <string name="generic_disabled">Disabled</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_yes">Yes</string>

    <!-- Generic Error -->
    <string name="error_unknown">Unknown error</string>

    <!-- Notes Screen -->
    <string name="notes_greeting_title">Hey there!</string>
    <string name="notes_greeting_message">It\'s great to see you taking notes!</string>
    <string name="notes_list_title">Notes</string>
    <string name="notes_empty_list_message">You have no notes added. Press \'+\' to add a note!</string>
    <string name="notes_order_section_title">Title</string>
    <string name="notes_order_section_date">Date</string>
    <string name="notes_order_section_color">Color</string>
    <string name="notes_order_section_ascending">Ascending</string>
    <string name="notes_order_section_descending">Descending</string>
    <string name="notes_delete_confirmation_message">Are you sure you want to delete this note?</string>

    <string name="notes_content_description_sort">Sort</string>
    <string name="notes_content_description_add">Add</string>
    <string name="notes_content_description_search">Search</string>
    <string name="notes_content_description_toggle_grid_list_view">Toggle gridview/list view</string>
    <string name="notes_content_description_settings">Settings</string>
    <string name="notes_content_description_delete">Delete</string>

    <!-- Search Notes Screen -->
    <string name="notes_search_field_hint">Search here…</string>
    <string name="notes_search_empty_message">No matching notes</string>

    <string name="notes_search_content_description_search_text">Search Query</string>
    <string name="notes_search_content_description_back">Back</string>
    <string name="notes_search_content_description_close">Clean</string>

    <!-- Add/Edit Note Screen -->
    <string name="add_edit_note_add_title">Add Note</string>
    <string name="add_edit_note_edit_title">Edit Note</string>
    <string name="add_edit_note_edited_on">Last edited: %s</string>
    <string name="add_edit_note_title_hint">Enter title…</string>
    <string name="add_edit_note_content_hint">Enter content…</string>
    <string name="error_add_note_empty_title">The title of the note can\'t be empty</string>
    <string name="error_add_note_empty_content">The content of the note can\'t be empty</string>
    <string name="error_add_note_invalid_note">The note you\'re trying to edit was deleted</string>

    <string name="add_edit_note_content_description_delete">Delete</string>
    <string name="add_edit_note_content_description_save">Save</string>
    <string name="add_edit_note_content_description_edit">Edit</string>
    <string name="add_edit_note_content_description_back">Back</string>

    <!-- Settings Screen -->
    <string name="settings_title">Settings</string>
    <string name="settings_header_user_interface">User interface</string>
    <string name="settings_show_greeting">Show greeting</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_dialog_title">Choose Theme</string>
    <string name="settings_theme_option_system_default">System default</string>
    <string name="settings_theme_option_light">Light</string>
    <string name="settings_theme_option_dark">Dark</string>
    <string name="settings_theme_option_dark_yellow">Dark Yellow</string>
    <string name="settings_theme_option_pink_blue">Pink and Blue</string>
    <string name="settings_theme_option_dynamic">Dynamic Colors</string>
    <string name="settings_font">Font</string>
    <string name="settings_font_dialog_title">Choose Font</string>
    <string name="settings_font_option_montserrat_default">Montserrat (Default)</string>
    <string name="settings_font_option_roboto">Roboto</string>
    <string name="settings_font_option_serif">Serif</string>
    <string name="settings_font_option_monospace">Monospace</string>
    <string name="settings_header_about">About</string>
    <string name="settings_rate_app_title">Rate app</string>
    <string name="settings_rate_app_message">Reviews help us a lot. Thank you!</string>
    <string name="settings_share_app_title">Share app</string>
    <string name="settings_share_app_message">Love taking notes? Your friends do too!</string>
    <string name="settings_privacy_policy_title">Privacy policy</string>
    <string name="settings_privacy_policy_message">How do we handle your data?</string>
    <string name="settings_share_app_intent_message">Check out \'Take Note! App\': %s</string>
    <string name="settings_twenty_four_hour_clock">24-hour clock</string>
    <string name="settings_app_version_title">Version</string>

    <string name="settings_content_description_back">Back</string>

    <!-- Common Screens -->
    <string name="empty_list_content_description_icon">Info</string>


</resources>